depreduce/src/test_data/reducers/kt-transitive.out
Sorted nodes in topological order:
  //main:main_lib-sources.jar
  //main:main_lib.jar
  //main:main_deploy.jar.unstripped
  //main:main_deploy.jar
  //main:main_deploy-src.jar
  //main:main-src.jar
  //main:main.jar
  //libd:libd-sources.jar
  //libd:libd.jar
  //libc:libc-sources.jar
  //libc:libc.jar
  //libb:libb-sources.jar
  //libb:libb.jar
  //liba:liba-sources.jar
  //liba:liba.jar
  //main:main
  @bazel_tools//tools/jdk:launcher_flag_alias
  //main:main_lib
  //main:Main.kt
  //libd:libd
  //libd:ClassD.kt
  //libc:libc
  //libc:ClassC.kt
  //libb:libb
  //libb:ClassB.kt
  //liba:liba
  //liba:ClassA.kt
Processing node: //main:main_lib-sources.jar
Processing node: //main:main_lib.jar
Processing node: //main:main_deploy.jar.unstripped
Processing node: //main:main_deploy.jar
Processing node: //main:main_deploy-src.jar
Processing node: //main:main-src.jar
Processing node: //main:main.jar
Processing node: //libd:libd-sources.jar
Processing node: //libd:libd.jar
Processing node: //libc:libc-sources.jar
Processing node: //libc:libc.jar
Processing node: //libb:libb-sources.jar
Processing node: //libb:libb.jar
Processing node: //liba:liba-sources.jar
Processing node: //liba:liba.jar
Processing node: //main:main
  Trying a new candidate set
    Only consider deps for //main:main -> //main:main.jar (because of no in-degree)
    Failed to remove //main:main.jar -> //main:main
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //main:main -> //main:main-src.jar (because of no in-degree)
    Failed to remove //main:main-src.jar -> //main:main
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //main:main -> //main:main_deploy-src.jar (because of no in-degree)
    Failed to remove //main:main_deploy-src.jar -> //main:main
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //main:main -> //main:main_deploy.jar (because of no in-degree)
    Failed to remove //main:main_deploy.jar -> //main:main
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //main:main -> //main:main_deploy.jar.unstripped (because of no in-degree)
    Failed to remove //main:main_deploy.jar.unstripped -> //main:main
  No changes made, skipping build
Processing node: @bazel_tools//tools/jdk:launcher_flag_alias
  Trying a new candidate set
    Failed to remove //main:main -> @bazel_tools//tools/jdk:launcher_flag_alias
  No changes made, skipping build
Processing node: //main:main_lib
  Trying a new candidate set
    Failed to remove //main:main -> //main:main_lib
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //main:main_lib -> //main:main_lib.jar (because of no in-degree)
    Failed to remove //main:main_lib.jar -> //main:main_lib
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //main:main_lib -> //main:main_lib-sources.jar (because of no in-degree)
    Failed to remove //main:main_lib-sources.jar -> //main:main_lib
  No changes made, skipping build
Processing node: //main:Main.kt
  Trying a new candidate set
    Removed //main:main_lib -> //main:Main.kt
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 6 targets (1 packages loaded, 0 targets configured)
        Analyzing: 6 targets (1 packages loaded, 0 targets configured)
        
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/kotlin-transitive/main/BUILD:4:15: in kt_jvm_library rule //main:main_lib: 
        Traceback (most recent call last):
        	File "/home/hongxu/.cache/bazel/_bazel_hongxu/da4a2159a7e45624f7771601be8215e2/external/rules_kotlin+/kotlin/internal/jvm/impl.bzl", line 218, column 13, in kt_jvm_library_impl
        		fail(
        Error in fail: attribute deps: deps without srcs is invalid.
        To add runtime dependencies use runtime_deps.
        To export libraries use exports.
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/kotlin-transitive/main/BUILD:4:15: Analysis of target '//main:main_lib' failed
        Use --verbose_failures to see the command lines of failed build steps.
        ERROR: Analysis of target '//main:main_lib' failed; build aborted
        INFO: Elapsed time: 1.070s, Critical Path: 0.00s
        INFO: 1 process: 1 internal.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //main:Main.kt
  No changes made, skipping build
Processing node: //libd:libd
  Trying a new candidate set
    Removed //main:main_lib -> //libd:libd
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 6 targets (1 packages loaded, 0 targets configured)
        Analyzing: 6 targets (1 packages loaded, 0 targets configured)
        
        INFO: Analyzed 6 targets (1 packages loaded, 3 targets configured).
        [16 / 38] JavaToolchainCompileBootClasspath external/rules_java+/toolchains/platformclasspath.jar; 1s linux-sandbox ... (2 actions, 1 running)
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/kotlin-transitive/main/BUILD:4:15: KotlinCompile //main:main_lib { kt: 1, java: 0, srcjars: 0 } for k8 failed: (Exit 1): build failed: error executing KotlinCompile command (from target //main:main_lib) bazel-out/k8-opt-exec-ST-d57f47055a04/bin/external/rules_kotlin+/src/main/kotlin/build '--flagfile=bazel-out/k8-fastbuild/bin/main/main_lib-kt.jar-0.params'
        main/Main.kt:4:8: error: unresolved reference: libb
        import libb.ClassB
               ^
        main/Main.kt:5:8: error: unresolved reference: libc
        import libc.ClassC
               ^
        main/Main.kt:12:21: error: unresolved reference: ClassB
                    println(ClassB.multiply(2, 3))
                            ^
        main/Main.kt:13:21: error: unresolved reference: ClassC
                    println(ClassC.divide(9, 3))
                            ^
        Jun 26, 2025 6:52:23 PM worker request 0
        SEVERE: Compilation failure: compile phase failed:
        main/Main.kt:4:8: error: unresolved reference: libb
        import libb.ClassB
               ^
        main/Main.kt:5:8: error: unresolved reference: libc
        import libc.ClassC
               ^
        main/Main.kt:12:21: error: unresolved reference: ClassB
                    println(ClassB.multiply(2, 3))
                            ^
        main/Main.kt:13:21: error: unresolved reference: ClassC
                    println(ClassC.divide(9, 3))
                            ^Use --verbose_failures to see the command lines of failed build steps.
        INFO: Elapsed time: 2.073s, Critical Path: 1.93s
        INFO: 15 processes: 23 action cache hit, 8 internal, 4 linux-sandbox, 3 worker.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //libd:libd
  Skipping //main:main_lib -> //liba:liba (already exists)
  Added //main:main_lib -> //libb:libb
  Added //main:main_lib -> //libc:libc
  Skipping //main:main_lib -> //libd:ClassD.kt (non-target)
  Build succeeded
  Trying a new candidate set
    Only consider deps for //libd:libd -> //libd:libd.jar (because of no in-degree)
    Failed to remove //libd:libd.jar -> //libd:libd
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //libd:libd -> //libd:libd-sources.jar (because of no in-degree)
    Failed to remove //libd:libd-sources.jar -> //libd:libd
  No changes made, skipping build
Processing node: //libd:ClassD.kt
  Trying a new candidate set
    Removed //libd:libd -> //libd:ClassD.kt
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 6 targets (1 packages loaded, 0 targets configured)
        Analyzing: 6 targets (1 packages loaded, 0 targets configured)
        
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/kotlin-transitive/libd/BUILD:3:15: in kt_jvm_library rule //libd:libd: 
        Traceback (most recent call last):
        	File "/home/hongxu/.cache/bazel/_bazel_hongxu/da4a2159a7e45624f7771601be8215e2/external/rules_kotlin+/kotlin/internal/jvm/impl.bzl", line 218, column 13, in kt_jvm_library_impl
        		fail(
        Error in fail: attribute deps: deps without srcs is invalid.
        To add runtime dependencies use runtime_deps.
        To export libraries use exports.
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/kotlin-transitive/libd/BUILD:3:15: Analysis of target '//libd:libd' failed
        Use --verbose_failures to see the command lines of failed build steps.
        ERROR: Analysis of target '//libd:libd' failed; build aborted
        INFO: Elapsed time: 0.111s, Critical Path: 0.00s
        INFO: 1 process: 1 internal.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //libd:ClassD.kt
  No changes made, skipping build
Processing node: //libc:libc
  Trying a new candidate set
    Removed //libd:libd -> //libc:libc
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 6 targets (1 packages loaded, 0 targets configured)
        Analyzing: 6 targets (1 packages loaded, 0 targets configured)
        
        INFO: Analyzed 6 targets (1 packages loaded, 2 targets configured).
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/kotlin-transitive/libd/BUILD:3:15: KotlinCompile //libd:libd { kt: 1, java: 0, srcjars: 0 } for k8 failed: (Exit 1): build failed: error executing KotlinCompile command (from target //libd:libd) bazel-out/k8-opt-exec-ST-d57f47055a04/bin/external/rules_kotlin+/src/main/kotlin/build '--flagfile=bazel-out/k8-fastbuild/bin/libd/libd-kt.jar-0.params'
        libd/ClassD.kt:5:8: error: unresolved reference: libc
        import libc.ClassC
               ^
        libd/ClassD.kt:10:27: error: unresolved reference: divide
                    return ClassC.divide(ClassA.add(a, b) * ClassB.multiply(a, c), d)
                                  ^
        Jun 26, 2025 6:52:25 PM worker request 0
        SEVERE: Compilation failure: compile phase failed:
        libd/ClassD.kt:5:8: error: unresolved reference: libc
        import libc.ClassC
               ^
        libd/ClassD.kt:10:27: error: unresolved reference: divide
                    return ClassC.divide(ClassA.add(a, b) * ClassB.multiply(a, c), d)
                                  ^Use --verbose_failures to see the command lines of failed build steps.
        INFO: Elapsed time: 0.346s, Critical Path: 0.22s
        INFO: 2 processes: 2 internal.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //libc:libc
  Skipping //libd:libd -> //libc:ClassC.kt (non-target)
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //libc:libc -> //libc:libc.jar (because of no in-degree)
    Failed to remove //libc:libc.jar -> //libc:libc
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //libc:libc -> //libc:libc-sources.jar (because of no in-degree)
    Failed to remove //libc:libc-sources.jar -> //libc:libc
  No changes made, skipping build
Processing node: //libc:ClassC.kt
  Trying a new candidate set
    Removed //libc:libc -> //libc:ClassC.kt
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 6 targets (2 packages loaded, 0 targets configured)
        Analyzing: 6 targets (2 packages loaded, 0 targets configured)
        
        INFO: Analyzed 6 targets (2 packages loaded, 5 targets configured).
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/kotlin-transitive/libd/BUILD:3:15: KotlinCompile //libd:libd { kt: 1, java: 0, srcjars: 0 } for k8 failed: (Exit 1): build failed: error executing KotlinCompile command (from target //libd:libd) bazel-out/k8-opt-exec-ST-d57f47055a04/bin/external/rules_kotlin+/src/main/kotlin/build '--flagfile=bazel-out/k8-fastbuild/bin/libd/libd-kt.jar-0.params'
        libd/ClassD.kt:5:8: error: unresolved reference: libc
        import libc.ClassC
               ^
        libd/ClassD.kt:10:27: error: unresolved reference: divide
                    return ClassC.divide(ClassA.add(a, b) * ClassB.multiply(a, c), d)
                                  ^
        Jun 26, 2025 6:52:26 PM worker request 0
        SEVERE: Compilation failure: compile phase failed:
        libd/ClassD.kt:5:8: error: unresolved reference: libc
        import libc.ClassC
               ^
        libd/ClassD.kt:10:27: error: unresolved reference: divide
                    return ClassC.divide(ClassA.add(a, b) * ClassB.multiply(a, c), d)
                                  ^Use --verbose_failures to see the command lines of failed build steps.
        INFO: Elapsed time: 0.392s, Critical Path: 0.26s
        INFO: 9 processes: 1 action cache hit, 9 internal.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //libc:ClassC.kt
  No changes made, skipping build
Processing node: //libb:libb
  Trying a new candidate set
    Removed //libd:libd -> //libb:libb
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 6 targets (2 packages loaded, 0 targets configured)
        Analyzing: 6 targets (2 packages loaded, 0 targets configured)
        
        INFO: Analyzed 6 targets (2 packages loaded, 6 targets configured).
        [13 / 16] KotlinCompile //libd:libd { kt: 1, java: 0, srcjars: 0 } for k8; 1s worker
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/kotlin-transitive/libd/BUILD:3:15: KotlinCompile //libd:libd { kt: 1, java: 0, srcjars: 0 } for k8 failed: (Exit 1): build failed: error executing KotlinCompile command (from target //libd:libd) bazel-out/k8-opt-exec-ST-d57f47055a04/bin/external/rules_kotlin+/src/main/kotlin/build '--flagfile=bazel-out/k8-fastbuild/bin/libd/libd-kt.jar-0.params'
        libd/ClassD.kt:4:8: error: unresolved reference: libb
        import libb.ClassB
               ^
        libd/ClassD.kt:10:53: error: unresolved reference: ClassB
                    return ClassC.divide(ClassA.add(a, b) * ClassB.multiply(a, c), d)
                                                            ^
        Jun 26, 2025 6:52:31 PM worker request 0
        SEVERE: Compilation failure: compile phase failed:
        libd/ClassD.kt:4:8: error: unresolved reference: libb
        import libb.ClassB
               ^
        libd/ClassD.kt:10:53: error: unresolved reference: ClassB
                    return ClassC.divide(ClassA.add(a, b) * ClassB.multiply(a, c), d)
                                                            ^
        INFO: Elapsed time: 4.833s, Critical Path: 4.71s
        INFO: 9 processes: 6 action cache hit, 6 internal, 1 linux-sandbox, 2 worker.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //libb:libb
  Skipping //libd:libd -> //libb:ClassB.kt (non-target)
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //libb:libb -> //libb:libb.jar (because of no in-degree)
    Failed to remove //libb:libb.jar -> //libb:libb
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //libb:libb -> //libb:libb-sources.jar (because of no in-degree)
    Failed to remove //libb:libb-sources.jar -> //libb:libb
  No changes made, skipping build
Processing node: //libb:ClassB.kt
  Trying a new candidate set
    Removed //libb:libb -> //libb:ClassB.kt
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 6 targets (2 packages loaded, 0 targets configured)
        Analyzing: 6 targets (2 packages loaded, 0 targets configured)
        
        INFO: Analyzed 6 targets (2 packages loaded, 5 targets configured).
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/kotlin-transitive/main/BUILD:4:15: KotlinCompile //main:main_lib { kt: 1, java: 0, srcjars: 0 } for k8 failed: (Exit 1): build failed: error executing KotlinCompile command (from target //main:main_lib) bazel-out/k8-opt-exec-ST-d57f47055a04/bin/external/rules_kotlin+/src/main/kotlin/build '--flagfile=bazel-out/k8-fastbuild/bin/main/main_lib-kt.jar-0.params'
        main/Main.kt:4:8: error: unresolved reference: libb
        import libb.ClassB
               ^
        main/Main.kt:12:21: error: unresolved reference: ClassB
                    println(ClassB.multiply(2, 3))
                            ^
        Jun 26, 2025 6:52:32 PM worker request 0
        SEVERE: Compilation failure: compile phase failed:
        main/Main.kt:4:8: error: unresolved reference: libb
        import libb.ClassB
               ^
        main/Main.kt:12:21: error: unresolved reference: ClassB
                    println(ClassB.multiply(2, 3))
                            ^
        INFO: Elapsed time: 0.419s, Critical Path: 0.25s
        INFO: 9 processes: 1 action cache hit, 9 internal.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //libb:ClassB.kt
  No changes made, skipping build
Processing node: //liba:liba
  Trying a new candidate set
    Removed //libd:libd -> //liba:liba
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 6 targets (2 packages loaded, 0 targets configured)
        Analyzing: 6 targets (2 packages loaded, 0 targets configured)
        
        INFO: Analyzed 6 targets (2 packages loaded, 6 targets configured).
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/kotlin-transitive/libd/BUILD:3:15: KotlinCompile //libd:libd { kt: 1, java: 0, srcjars: 0 } for k8 failed: (Exit 1): build failed: error executing KotlinCompile command (from target //libd:libd) bazel-out/k8-opt-exec-ST-d57f47055a04/bin/external/rules_kotlin+/src/main/kotlin/build '--flagfile=bazel-out/k8-fastbuild/bin/libd/libd-kt.jar-0.params'
        libd/ClassD.kt:3:8: error: unresolved reference: liba
        import liba.ClassA
               ^
        libd/ClassD.kt:10:34: error: unresolved reference: ClassA
                    return ClassC.divide(ClassA.add(a, b) * ClassB.multiply(a, c), d)
                                         ^
        Jun 26, 2025 6:52:32 PM worker request 0
        SEVERE: Compilation failure: compile phase failed:
        libd/ClassD.kt:3:8: error: unresolved reference: liba
        import liba.ClassA
               ^
        libd/ClassD.kt:10:34: error: unresolved reference: ClassA
                    return ClassC.divide(ClassA.add(a, b) * ClassB.multiply(a, c), d)
                                         ^Use --verbose_failures to see the command lines of failed build steps.
        INFO: Elapsed time: 0.260s, Critical Path: 0.13s
        INFO: 9 processes: 3 action cache hit, 7 internal, 1 linux-sandbox, 1 worker.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //liba:liba
  Skipping //libd:libd -> //liba:ClassA.kt (non-target)
  No changes made, skipping build
  Trying a new candidate set
    Removed //main:main_lib -> //liba:liba
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 6 targets (2 packages loaded, 0 targets configured)
        Analyzing: 6 targets (2 packages loaded, 0 targets configured)
        
        INFO: Analyzed 6 targets (2 packages loaded, 5 targets configured).
        [9 / 12] KotlinCompile //main:main_lib { kt: 1, java: 0, srcjars: 0 } for k8; 1s worker
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/kotlin-transitive/main/BUILD:4:15: KotlinCompile //main:main_lib { kt: 1, java: 0, srcjars: 0 } for k8 failed: (Exit 1): build failed: error executing KotlinCompile command (from target //main:main_lib) bazel-out/k8-opt-exec-ST-d57f47055a04/bin/external/rules_kotlin+/src/main/kotlin/build '--flagfile=bazel-out/k8-fastbuild/bin/main/main_lib-kt.jar-0.params'
        main/Main.kt:3:8: error: unresolved reference: liba
        import liba.ClassA
               ^
        main/Main.kt:11:21: error: unresolved reference: ClassA
                    println(ClassA.add(2, 3))
                            ^
        Jun 26, 2025 6:52:37 PM worker request 0
        SEVERE: Compilation failure: compile phase failed:
        main/Main.kt:3:8: error: unresolved reference: liba
        import liba.ClassA
               ^
        main/Main.kt:11:21: error: unresolved reference: ClassA
                    println(ClassA.add(2, 3))
                            ^Use --verbose_failures to see the command lines of failed build steps.
        INFO: Elapsed time: 4.563s, Critical Path: 4.43s
        INFO: 7 processes: 3 action cache hit, 6 internal, 1 worker.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //liba:liba
  Skipping //main:main_lib -> //liba:ClassA.kt (non-target)
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //liba:liba -> //liba:liba.jar (because of no in-degree)
    Failed to remove //liba:liba.jar -> //liba:liba
  No changes made, skipping build
  Trying a new candidate set
    Only consider deps for //liba:liba -> //liba:liba-sources.jar (because of no in-degree)
    Failed to remove //liba:liba-sources.jar -> //liba:liba
  No changes made, skipping build
Processing node: //liba:ClassA.kt
  Trying a new candidate set
    Removed //liba:liba -> //liba:ClassA.kt
  Build failed: Build failed with exit code 1:
        Computing main repo mapping: 
        Loading: 
        Loading: 0 packages loaded
        Analyzing: 6 targets (2 packages loaded, 0 targets configured)
        Analyzing: 6 targets (2 packages loaded, 0 targets configured)
        
        INFO: Analyzed 6 targets (2 packages loaded, 5 targets configured).
        ERROR: /data/h445xu/repo/bazel-dep-reduce/examples/kotlin-transitive/main/BUILD:4:15: KotlinCompile //main:main_lib { kt: 1, java: 0, srcjars: 0 } for k8 failed: (Exit 1): build failed: error executing KotlinCompile command (from target //main:main_lib) bazel-out/k8-opt-exec-ST-d57f47055a04/bin/external/rules_kotlin+/src/main/kotlin/build '--flagfile=bazel-out/k8-fastbuild/bin/main/main_lib-kt.jar-0.params'
        main/Main.kt:3:8: error: unresolved reference: liba
        import liba.ClassA
               ^
        main/Main.kt:11:21: error: unresolved reference: ClassA
                    println(ClassA.add(2, 3))
                            ^
        Jun 26, 2025 6:52:38 PM worker request 0
        SEVERE: Compilation failure: compile phase failed:
        main/Main.kt:3:8: error: unresolved reference: liba
        import liba.ClassA
               ^
        main/Main.kt:11:21: error: unresolved reference: ClassA
                    println(ClassA.add(2, 3))
                            ^Use --verbose_failures to see the command lines of failed build steps.
        INFO: Elapsed time: 0.352s, Critical Path: 0.23s
        INFO: 9 processes: 1 action cache hit, 9 internal.
        ERROR: Build did NOT complete successfully

  Trying to add transitive dependencies for node //liba:ClassA.kt
  No changes made, skipping build
